--- a/index.html
+++ b/index.html
@@ -375,47 +375,46 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container footer-main">
-          <div class="footer-main-for-link-and-paragraph">
-              <a href="./index.html" class="logo-footer link"
-                >Web <span class="studio-word-footer">Studio</span></a
-              >
-              <p class="p-footer">
-                Increase the flow of customers and sales for your business with
-                digital marketing & growth solutions.
-              </p>
+      <div class="container footer-container">
+          <div class="footer-container-for-logo-and-paragraph">
+              <a href="./images/Logo.png" class="logo-footer link">Web <span class="studio-word-decorate-portfolio-footer">Studio</span></a>
+              <p class="p-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
           </div>
           <div>
-            <p class="social-media-footer">Social media</p>
-            <ul class="social-media-list-footer list">
-              <li class="social-media-item-footer">
-                <a href="" class="social-media-link-footer"></a>
-                <svg width="24" height="24" class="svg-footer">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </li>
-              <li class="social-media-item-footer">
-                <a href="" class="social-media-link-footer"></a>
-                <svg width="24" height="24" class="svg-footer">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </li>
-              <li class="social-media-item-footer">
-                <a href="" class="social-media-link-footer"></a>
-                <svg width="24" height="24" class="svg-footer">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </li>
-              <li class="social-media-item-footer">
-                <a href="" class="social-media-link-footer"></a>
-                <svg width="24" height="24" class="svg-footer">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </li>
-            </ul>
+              <p class="social-media-portfolio">Social media</p>
+              <ul class="ul-footer list">
+                  <li class="socail-media-item-portfolio">
+                      <a href="" class="social-media-link">
+                          <svg width="24" height="24" class="svg-footer-portfolio">
+                              <use href="./images/icons.svg#icon-instagram"></use>
+                          </svg>
+                      </a>
+                  </li>
+                  <li class="socail-media-item-portfolio">
+                      <a href="" class="social-media-link">
+                          <svg width="24" height="24" class="svg-footer-portfolio">
+                              <use href="./images/icons.svg#icon-twitter"></use>
+                          </svg>
+                      </a>
+                  </li>
+                  <li class="socail-media-item-portfolio">
+                      <a href="" class="social-media-link">
+                          <svg width="24" height="24" class="svg-footer-portfolio">
+                              <use href="./images/icons.svg#icon-facebook"></use>
+                          </svg>
+                      </a>
+                  </li>
+                  <li class="socail-media-item-portfolio">
+                      <a href="" class="social-media-link">
+                          <svg width="24" height="24" class="svg-footer-portfolio">
+                              <use href="./images/icons.svg#icon-linkedin"></use>
+                          </svg>
+                      </a>
+                  </li>
+              </ul>
           </div>
-      </div>  
-    </footer>
+      </div>
+  </footer>
     <div data-modal class="js-structure is-hidden">
       <div class="modal-window">
         <button type="button" data-modal-close class="button-close">
