--- a/index.html
+++ b/index.html
@@ -381,32 +381,32 @@
               <p class="p-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
           </div>
           <div>
-              <p class="social-media-portfolio">Social media</p>
+              <p class="social-media">Social media</p>
               <ul class="ul-footer list">
-                  <li class="socail-media-item-portfolio">
+                  <li class="social-media-item">
                       <a href="" class="social-media-link">
-                          <svg width="24" height="24" class="svg-footer-portfolio">
+                          <svg width="24" height="24" class="svg-footer">
                               <use href="./images/icons.svg#icon-instagram"></use>
                           </svg>
                       </a>
                   </li>
-                  <li class="socail-media-item-portfolio">
+                  <li class="social-media-item">
                       <a href="" class="social-media-link">
-                          <svg width="24" height="24" class="svg-footer-portfolio">
+                          <svg width="24" height="24" class="svg-footer">
                               <use href="./images/icons.svg#icon-twitter"></use>
                           </svg>
                       </a>
                   </li>
-                  <li class="socail-media-item-portfolio">
+                  <li class="social-media-item">
                       <a href="" class="social-media-link">
-                          <svg width="24" height="24" class="svg-footer-portfolio">
+                          <svg width="24" height="24" class="svg-footer">
                               <use href="./images/icons.svg#icon-facebook"></use>
                           </svg>
                       </a>
                   </li>
-                  <li class="socail-media-item-portfolio">
+                  <li class="social-media-item">
                       <a href="" class="social-media-link">
-                          <svg width="24" height="24" class="svg-footer-portfolio">
+                          <svg width="24" height="24" class="svg-footer">
                               <use href="./images/icons.svg#icon-linkedin"></use>
                           </svg>
                       </a>
