--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
                
                <ul class="list advantages-list">
                    <li class="advantages-item">
-                       <a class="link advantages-link">
+                       <a href="/" class="link advantages-link">
                             <div class="container-for-photo">
                                 <img src="./images/image8.jpg" alt="Banking App Interface Concept" width="360">
                                 <p class="fixed-paragraph-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
@@ -59,7 +59,7 @@
                        </a>
                     </li>
                     <li class="advantages-item">
-                       <a class="link advantages-link">
+                       <a href="/" class="link advantages-link">
                             <div class="container-for-photo">
                                 <img src="./images/image1.jpg" alt="Cashless payment" width="360">
                                 <p class="fixed-paragraph-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
@@ -71,7 +71,7 @@
                        </a>
                     </li>
                     <li class="advantages-item">
-                        <a class="link advantages-link">
+                        <a href="/" class="link advantages-link">
                             <div class="container-for-photo"> 
                                 <img src="./images/image2.jpg" alt="Meditation App" width="360">
                                 <p class="fixed-paragraph-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
@@ -83,7 +83,7 @@
                         </a>
                     </li>
                     <li class="advantages-item">
-                        <a class="link advantages-link">
+                        <a href="/" class="link advantages-link">
                             <div class="container-for-photo">   
                                 <img src="./images/image3.jpg" alt="Taxi Service" width="360">
                                 <p class="fixed-paragraph-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
@@ -95,7 +95,7 @@
                         </a>
                     </li>
                     <li class="advantages-item">
-                        <a class="link advantages-link">
+                        <a href="/" class="link advantages-link">
                             <div class="container-for-photo">  
                                 <img src="./images/image9.jpg" alt="Screen Illustrations" width="360">
                                 <p class="fixed-paragraph-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
@@ -107,7 +107,7 @@
                         </a>
                     </li>
                     <li class="advantages-item">
-                        <a class="link advantages-link">
+                        <a href="/" class="link advantages-link">
                             <div class="container-for-photo">
                                 <img src="./images/image4.jpg" alt="Online Courses" width="360">
                                 <p class="fixed-paragraph-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
@@ -119,7 +119,7 @@
                        </a>
                     </li>
                     <li class="advantages-item">
-                        <a class="link advantages-link">
+                        <a href="/" class="link advantages-link">
                             <div class="container-for-photo">  
                                 <img src="./images/image5.jpg" alt="Instagram Stories Concept" width="360">
                                 <p class="fixed-paragraph-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
@@ -131,7 +131,7 @@
                         </a>
                     </li>
                     <li class="advantages-item">
-                        <a class="link advantages-link">
+                        <a href="/" class="link advantages-link">
                             <div class="container-for-photo">
                                 <img src="./images/image6.jpg" alt="Organic Food" width="360">
                                 <p class="fixed-paragraph-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
@@ -143,7 +143,7 @@
                         </a>
                     </li>
                     <li class="advantages-item">
-                        <a class="link advantages-link">
+                        <a href="/" class="link advantages-link">
                             <div class="container-for-photo"> 
                                 <img src="./images/image7.jpg" alt="Fresh Coffee" width="360">
                                 <p class="fixed-paragraph-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
@@ -165,32 +165,32 @@
                 <p class="p-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
             </div>
             <div>
-                <p class="social-media-portfolio">Social media</p>
+                <p class="social-media">Social media</p>
                 <ul class="ul-footer list">
-                    <li class="socail-media-item-portfolio">
+                    <li class="social-media-item">
                         <a href="" class="social-media-link">
-                            <svg width="24" height="24" class="svg-footer-portfolio">
+                            <svg width="24" height="24" class="svg-footer">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="socail-media-item-portfolio">
+                    <li class="social-media-item">
                         <a href="" class="social-media-link">
-                            <svg width="24" height="24" class="svg-footer-portfolio">
+                            <svg width="24" height="24" class="svg-footer">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="socail-media-item-portfolio">
+                    <li class="social-media-item">
                         <a href="" class="social-media-link">
-                            <svg width="24" height="24" class="svg-footer-portfolio">
+                            <svg width="24" height="24" class="svg-footer">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="socail-media-item-portfolio">
+                    <li class="social-media-item">
                         <a href="" class="social-media-link">
-                            <svg width="24" height="24" class="svg-footer-portfolio">
+                            <svg width="24" height="24" class="svg-footer">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
