--- a/index.html
+++ b/index.html
@@ -165,28 +165,28 @@
                 <p class="person-text">Product Designer</p>
                 <ul class="social-media-of-person-list list">
                   <li class="social-media-of-person-item">
-                    <a href="" class="social-media-link">
+                    <a href="" class="social-media-link-main">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-of-person-item">
-                    <a href="" class="social-media-link">
+                    <a href="" class="social-media-link-main">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-of-person-item">
-                    <a href="" class="social-media-link">
+                    <a href="" class="social-media-link-main">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-of-person-item">
-                    <a href="" class="social-media-link">
+                    <a href="" class="social-media-link-main">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -207,28 +207,28 @@
                 <p class="person-text">Frontend Developer</p>
                 <ul class="social-media-of-person-list list">
                   <li class="social-media-of-person-item current">
-                    <a href="" class="social-media-link">
+                    <a href="" class="social-media-link-main">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-of-person-item current">
-                    <a href="" class="social-media-link">
+                    <a href="" class="social-media-link-main">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-of-person-item current">
-                    <a href="" class="social-media-link">
+                    <a href="" class="social-media-link-main">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-of-person-item current">
-                    <a href="" class="social-media-link">
+                    <a href="" class="social-media-link-main">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -249,28 +249,28 @@
                 <p class="person-text">Marketing</p>
                 <ul class="social-media-of-person-list list">
                   <li class="social-media-of-person-item">
-                    <a href="" class="social-media-link">
+                    <a href="" class="social-media-link-main">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-of-person-item">
-                    <a href="" class="social-media-link">
+                    <a href="" class="social-media-link-main">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-of-person-item">
-                    <a href="" class="social-media-link">
+                    <a href="" class="social-media-link-main">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-of-person-item">
-                    <a href="" class="social-media-link">
+                    <a href="" class="social-media-link-main">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -291,28 +291,28 @@
                 <p class="person-text">UI Designer</p>
                 <ul class="social-media-of-person-list list">
                   <li class="social-media-of-person-item">
-                    <a href="" class="social-media-link">
+                    <a href="" class="social-media-link-main">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-of-person-item">
-                    <a href="" class="social-media-link">
+                    <a href="" class="social-media-link-main">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-of-person-item">
-                    <a href="" class="social-media-link">
+                    <a href="" class="social-media-link-main">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-of-person-item">
-                    <a href="" class="social-media-link">
+                    <a href="" class="social-media-link-main">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
